<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvExamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_will_appear_here"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbOptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_a"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbOptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbOptionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbOptionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_d"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>
</LinearLayout>
