<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvExamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_the_exam_is_30_minutes_long_n2_do_not_switch_apps_during_the_exam_n3_each_question_carries_1_mark"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnStartExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_exam"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
